# crust-of-rust

./: Cargo.toml
benches/: sort_benchmark.rs  sorting_benchmark.rs
minigrep/src/: lib.rs  main.rs
src/: lib.rs  main.rs  sort.rs  sorting.rs  vector.rs
src/sort/: bubble_sort.rs  insertion_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs
src/sorting/: bubble_sort.rs  insertion_sort.rs  quick_sort.rs  selection_sort.rs
